--- a/index.html
+++ b/index.html
@@ -150,6 +150,57 @@
                 </ul>
             </div>
         </section>
+        <section Class="companis-container">
+            <div class="container">
+                <h2 class="second-headline">Постійні клієнти</h2>
+                <ul class="icon-companis-ul list">
+                    <li class="icon-companis-li">
+                        <a class="icon-companies">
+                            <svg class="icon-companie" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-yacologo"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-companis-li">
+                        <a class="icon-companies">
+                            <svg class="icon-companie" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-taglinelogo"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-companis-li">
+                        <a class="icon-companies">
+                            <svg class="icon-companie" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-nocompanylogo"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-companis-li">
+                        <a class="icon-companies">
+                            <svg class="icon-companie" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-fosterlogo"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-companis-li">
+                        <a class="icon-companies">
+                            <svg class="icon-companie" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-brandlogo"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-companis-li">
+                        <a class="icon-companies">
+                            <svg class="icon-companie" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-companylogo"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+
+        </section>
 
     </main>
     <footer class="footer">
