--- a/index.html
+++ b/index.html
@@ -124,6 +124,37 @@
                         <div class="command">
                             <h3 class="command-name">Ігор Демяненко</h3>
                             <p lang="en" class="command-name-position">Product Designer</p>
+                            <ul class="list">
+                                <li>
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="44" height="44">
+                                            <use href="./images/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="44" height="44">
+                                            <use href="./images/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="44" height="44">
+                                            <use href="./images/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                     </a>
+                                 </li>
+                                 <li>
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="44" height="44">
+                                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                 </li>
+
+                            </ul>
                         </div>
                     </li>
                     <li class="our-team-item">
