--- a/index.html
+++ b/index.html
@@ -125,35 +125,34 @@
                             <h3 class="command-name">Ігор Демяненко</h3>
                             <p lang="en" class="command-name-position">Product Designer</p>
                             <ul class="icon-social-networks-ul list">
-                                <li>
+                                <li class="icon-social-networks-li">
                                     <a class="icon-social-networks">
                                         <svg class="icon-s-n" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="icon-social-networks-li">
                                     <a class="icon-social-networks">
                                         <svg class="icon-s-n" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="icon-social-networks-li">
                                     <a class="icon-social-networks">
                                         <svg class="icon-s-n" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-facebook"></use>
                                         </svg>
-                                     </a>
-                                 </li>
-                                 <li>
+                                        </a>
+                                    </li>
+                                    <li class="icon-social-networks-li">
                                     <a class="icon-social-networks">
                                         <svg class="icon-s-n" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
-                                 </li>
-
+                                    </li>
                             </ul>
                         </div>
                     </li>
@@ -229,10 +228,7 @@
                     </li>
                 </ul>
             </div>
-
-
         </section>
-
     </main>
     <footer class="footer">
         <div class="container ">
