--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                             <use href="./images/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
-                                    </li>
+                                </li>
                             </ul>
                         </div>
                     </li>
@@ -161,6 +161,36 @@
                         <div class="command">
                             <h3 class="command-name">Ольга Репіна</h3>
                             <p lang="en" class="command-name-position">Frontend Developer</p>
+                            <ul class="icon-social-networks-ul list">
+                                <li class="icon-social-networks-li">
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-social-networks-li">
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-social-networks-li">
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-social-networks-li">
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="our-team-item">
@@ -168,6 +198,36 @@
                         <div class="command">
                             <h3 class="command-name">Микола Тарасов</h3>
                             <p lang="en" class="command-name-position">Marketing</p>
+                            <ul class="icon-social-networks-ul list">
+                                <li class="icon-social-networks-li">
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-social-networks-li">
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-social-networks-li">
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-social-networks-li">
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="our-team-item">
@@ -175,6 +235,36 @@
                         <div class="command">
                             <h3 class="command-name">Михайло Єрмаков</h3>
                             <p lang="en" class="command-name-position">UI Designer</p>
+                            <ul class="icon-social-networks-ul list">
+                                <li class="icon-social-networks-li">
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-social-networks-li">
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-social-networks-li">
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                        </a>
+                                    </li>
+                                    <li class="icon-social-networks-li">
+                                    <a class="icon-social-networks">
+                                        <svg class="icon-s-n" width="20" height="20">
+                                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
