--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
             </nav>
             <ul class="site-nav list">
                 <li class="site-nav-item">
-                    <div class="icon-nav-hover"></div>
-                        <svg class="icon-nav" width="16" height="12">
-                            <use xlink:href="./images/sprite.svg#icon-mail"></use>
-                        </svg>
-                        <a href="mailto:info@devstudio.com" class="contacts-nav-link">info@devstudio.com</a>
-                    </div>
+                        <a href="mailto:info@devstudio.com" class="contacts-nav-link">
+                            <a>
+                                <svg class="icon-nav" width="16" height="12">
+                                    <use xlink:href="./images/sprite.svg#icon-mail"></use>
+                                </svg>
+                            </a>info@devstudio.com
+                        </a>
                 </li>
                 <li class="site-nav-item">
                     <div class="icon-nav-hover">
