--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
             </nav>
             <ul class="site-nav list">
                 <li class="site-nav-item">
-                        <a href="mailto:info@devstudio.com" class="contacts-nav-link">
-                            <a>
-                                <svg class="icon-nav" width="16" height="12">
-                                    <use xlink:href="./images/sprite.svg#icon-mail"></use>
-                                </svg>
-                            </a>info@devstudio.com
-                        </a>
+                    <div class="icon-nav-hover">
+                        <svg class="icon-nav" width="16" height="12">
+                            <use xlink:href="./images/sprite.svg#icon-mail"></use>
+                        </svg>
+                        <a href="mailto:info@devstudio.com" class="contacts-nav-link">info@devstudio.com</a>
+                    </div>
                 </li>
                 <li class="site-nav-item">
                     <div class="icon-nav-hover">
