--- a/index.html
+++ b/index.html
@@ -326,20 +326,54 @@
     </main>
     <footer class="footer">
         <div class="container ">
-            <div class="footer-maine">
-                <a href="./index.html" lang="en" class="logo-wight"><span class="logo-web">Web</span>Studio</a>
-                <address class="list">
-                    <ul class="footer-addresslist list">
-                        <li class="footer-contacts">м. Київ, пр-т Лесі Українки, 26</li>
-                        <li class="footer-contacts">
-                            <a href="tel:+380961111111" class="footer-contacts-text">+38 096 111 11 11</a>
-                        </li>
-                        <li class="footer-contacts">
-                            <a href=".info@devstudio.com" class="footer-contacts-text">info@devstudio.com</a>
-                        </li>
-                    </ul>
-                </address>
-            </div>
+            <ul class="footer-maine list">
+                <li class="footer-maine-li">
+                    <a href="./index.html" lang="en" class="logo-wight"><span class="logo-web">Web</span>Studio</a>
+                    <address class="list">
+                        <ul class="footer-addresslist list">
+                            <li class="footer-contacts">м. Київ, пр-т Лесі Українки, 26</li>
+                            <li class="footer-contacts">
+                                <a href="tel:+380961111111" class="footer-contacts-text">+38 096 111 11 11</a>
+                            </li>
+                            <li class="footer-contacts">
+                                <a href=".info@devstudio.com" class="footer-contacts-text">info@devstudio.com</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a class="footer-header">Приїднуйтесь</a>
+                        <ul class="icon-social-networks-ul list">
+                            <li class="icon-social-networks-li">
+                                <a class="icon-social-networks">
+                                    <svg class="icon-s-n" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="icon-social-networks-li">
+                                <a class="icon-social-networks">
+                                    <svg class="icon-s-n" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="icon-social-networks-li">
+                                <a class="icon-social-networks">
+                                    <svg class="icon-s-n" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                    </svg>
+                                    </a>
+                                </li>
+                                <li class="icon-social-networks-li">
+                                <a class="icon-social-networks">
+                                    <svg class="icon-s-n" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                        </ul>
+                </li>
+            </ul>
+            </address>
         </div>
     </footer>
 </body>
