--- a/index.html
+++ b/index.html
@@ -339,38 +339,39 @@
                                 <a href=".info@devstudio.com" class="footer-contacts-text">info@devstudio.com</a>
                             </li>
                         </ul>
-                    </li>
-                    <li>
-                        <a class="footer-header">Приїднуйтесь</a>
-                        <ul class="icon-social-networks-ul list">
-                            <li class="icon-social-networks-li">
-                                <a class="icon-social-networks">
-                                    <svg class="icon-s-n" width="20" height="20">
-                                        <use href="./images/sprite.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="icon-social-networks-li">
-                                <a class="icon-social-networks">
-                                    <svg class="icon-s-n" width="20" height="20">
-                                        <use href="./images/sprite.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="icon-social-networks-li">
-                                <a class="icon-social-networks">
-                                    <svg class="icon-s-n" width="20" height="20">
-                                        <use href="./images/sprite.svg#icon-facebook"></use>
-                                    </svg>
-                                    </a>
-                                </li>
-                                <li class="icon-social-networks-li">
-                                <a class="icon-social-networks">
-                                    <svg class="icon-s-n" width="20" height="20">
-                                        <use href="./images/sprite.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                        </ul>
+                </li>
+                <li class="footer-maine-li">
+                    <a class="footer-header">Приїднуйтесь</a>
+                    <ul class="icon-social-networks-ul list">
+                        <li class="icon-social-networks-li">
+                            <a class="icon-social-networks">
+                                <svg class="icon-s-n" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-social-networks-li">
+                            <a class="icon-social-networks">
+                                <svg class="icon-s-n" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-social-networks-li">
+                            <a class="icon-social-networks">
+                                <svg class="icon-s-n" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="icon-social-networks-li">
+                            <a class="icon-social-networks">
+                                <svg class="icon-s-n" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
             </address>
