--- a/index.html
+++ b/index.html
@@ -29,19 +29,23 @@
             <ul class="site-nav list">
                 <li class="site-nav-item">
                     <div class="icon-nav-hover">
-                        <svg class="icon-nav" width="16" height="12">
-                            <use xlink:href="./images/sprite.svg#icon-mail"></use>
-                        </svg>
-                        <a href="mailto:info@devstudio.com" class="contacts-nav-link">info@devstudio.com</a>
+                        <a href="mailto:info@devstudio.com" class="contacts-nav-link">
+                            <svg class="icon-nav" width="16" height="12">
+                                <use xlink:href="./images/sprite.svg#icon-mail"></use>
+                            </svg>
+                            <p>info@devstudio.com</p>
+                        </a>
                     </div>
                 </li>
                 <li class="site-nav-item">
                     <div class="icon-nav-hover">
-                        <svg class="icon-nav" width="10" height="16">
-                            <use xlink:href="./images/sprite.svg#icon-phone"></use>
-                        </svg>
-                        <a href="tel:+380961111111" class="contacts-nav-link">+38 096 111 11 11</a>
-                </div>
+                        <a href="tel:+380961111111" class="contacts-nav-link">
+                            <svg class="icon-nav" width="10" height="16">
+                                <use xlink:href="./images/sprite.svg#icon-phone"></use>
+                            </svg>
+                            <p>+38 096 111 11 11</p>
+                        </a>
+                    </div>
                 </li>
             </ul>
         </div>
