--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <nav>
                 <ul class="site-nav list">
                     <li class="item-nav">
-                        <a href="./index.html"><span class="site-nav-link">Студія</span></a>
+                        <a href="./index.html"class="site-nav-link">Студія</a>
                     </li>
                     <li class="item-nav">
-                        <a href="./portfolio.html"><span class="site-nav-link">Портфоліо</span></a>
+                        <a href="./portfolio.html" class="site-nav-link">Портфоліо</a>
                     </li>
                     <li class="item-nav">
-                        <a href="./index.html"><span class="site-nav-link">Контакти</span></a>
+                        <a href="./index.html" class="site-nav-link">Контакти</a>
                     </li>
                 </ul>
             </nav>
@@ -33,7 +33,7 @@
                             <svg class="icon-nav" width="16" height="12">
                                 <use xlink:href="./images/sprite.svg#icon-mail"></use>
                             </svg>
-                            <p>info@devstudio.com</p>
+                            <p class="margin-contacts-nav">info@devstudio.com</p>
                         </a>
                     </div>
                 </li>
@@ -43,7 +43,7 @@
                             <svg class="icon-nav" width="10" height="16">
                                 <use xlink:href="./images/sprite.svg#icon-phone"></use>
                             </svg>
-                            <p>+38 096 111 11 11</p>
+                            <p class="margin-contacts-nav">+38 096 111 11 11</p>
                         </a>
                     </div>
                 </li>
