--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                         </ul>
                 </li>
                 <li class="footer-maine-li">
-                    <a class="footer-header">Приїднуйтесь</a>
+                    <a class="footer-header">Приєднуйтесь</a>
                     <ul class="icon-social-networks-ul list">
                         <li class="icon-social-networks-li">
                             <a class="icon-social-networks">
