--- a/portfolio.html
+++ b/portfolio.html
@@ -16,22 +16,32 @@
             <nav>
                 <ul class="site-nav list">
                     <li class="item-nav">
-                        <a href="./index.html"><span class="site-nav-link">Студія</span></a>
+                        <a href="./index.html"class="site-nav-link">Студія</a>
                     </li>
                     <li class="item-nav">
-                        <a href="./portfolio.html"><span class="site-nav-link">Портфоліо</span></a>
+                        <a href="./portfolio.html" class="site-nav-link">Портфоліо</a>
                     </li>
                     <li class="item-nav">
-                        <a href="./index.html"><span class="site-nav-link">Контакти</span></a>
+                        <a href="./index.html" class="site-nav-link">Контакти</a>
                     </li>
                 </ul>
             </nav>
             <ul class="site-nav list">
                 <li class="site-nav-item">
-                <a href="mailto:info@devstudio.com" class="contacts-nav-link">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="contacts-nav-link">
+                        <svg class="icon-nav" width="16" height="12">
+                            <use xlink:href="./images/sprite.svg#icon-mail"></use>
+                        </svg>
+                        <p class="margin-contacts-nav">info@devstudio.com</p>
+                    </a>
                 </li>
                 <li class="site-nav-item">
-                <a href="tel:+380961111111" class="contacts-nav-link">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="contacts-nav-link">
+                        <svg class="icon-nav" width="10" height="16">
+                            <use xlink:href="./images/sprite.svg#icon-phone"></use>
+                        </svg>
+                        <p class="margin-contacts-nav">+38 096 111 11 11</p>
+                    </a>
                 </li>
             </ul>
         </div>
