--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul class="site-nav list">
                     <li class="item-nav">
-                        <a href="./index.html"class="site-nav-link">Студія</a>
+                        <a href="./index.html" class="site-nav-link">Студія</a>
                     </li>
                     <li class="item-nav">
                         <a href="./portfolio.html" class="site-nav-link">Портфоліо</a>
@@ -125,7 +125,7 @@
                     </li>
                     <li class="portfolio-items-main">
                             <img src="./images/growing.jpg" width="370" alt="Growing Business" class="img">
-                            <div class="portfolio-items-text"></div>
+                            <div class="portfolio-items-text">
                                 <h3 class="portfolio-items-name" lang="en">Growing Business</h3>
                                 <p class="portfolio-items">Додаток</p>
                             </div>
@@ -149,6 +149,7 @@
                                 <a href=".info@devstudio.com" class="footer-contacts-text">info@devstudio.com</a>
                             </li>
                         </ul>
+                    </address>
                 </li>
                 <li class="footer-maine-li">
                     <a class="footer-header">Приєднуйтесь</a>
@@ -184,7 +185,6 @@
                     </ul>
                 </li>
             </ul>
-            </address>
         </div>
     </footer>
 </body>
