--- a/portfolio.html
+++ b/portfolio.html
@@ -10,40 +10,49 @@
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
-    <header class="header-block">
-        <div class="main-header-block container">
-            <a href="./index.html" lang="en" class="logo-black"><span class="logo-web">Web</span>Studio</a>
-            <nav>
-                <ul class="site-nav list">
-                    <li class="item-nav">
-                        <a href="./index.html" class="site-nav-link">Студія</a>
-                    </li>
-                    <li class="item-nav">
-                        <a href="./portfolio.html" class="site-nav-link">Портфоліо</a>
-                    </li>
-                    <li class="item-nav">
-                        <a href="./index.html" class="site-nav-link">Контакти</a>
+    <header>
+        <div class="main-header-block">
+            <div class="container">
+                <ul class="header-main list">
+                    <li>
+                        <a href="./index.html" lang="en" class="logo-black"><span class="logo-web">Web</span>Studio</a>
+                    </li>                           
+                    <li>
+                        <nav>
+                            <ul class="site-nav list">
+                                <li class="item-nav">
+                                    <a href="./index.html" class="site-nav-link">Студія</a>
+                                </li>
+                                <li class="item-nav">
+                                    <a href="./portfolio.html" class="site-nav-link">Портфоліо</a>
+                                </li>
+                                <li class="item-nav">
+                                    <a href="./index.html" class="site-nav-link">Контакти</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    <li>
+                        <ul class=" list">
+                            <li class="site-nav-item">
+                                <a href="mailto:info@devstudio.com" class="contacts-nav-link">
+                                    <svg class="icon-nav" width="16" height="12">
+                                        <use xlink:href="./images/sprite.svg#icon-mail"></use>
+                                    </svg>
+                                    <p class="margin-contacts-nav">info@devstudio.com</p>
+                                </a>
+                            </li>
+                            <li class="site-nav-item">
+                                <a href="tel:+380961111111" class="contacts-nav-link">
+                                    <svg class="icon-nav" width="10" height="16">
+                                        <use xlink:href="./images/sprite.svg#icon-phone"></use>
+                                    </svg>
+                                    <p class="margin-contacts-nav">+38 096 111 11 11</p>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
-            </nav>
-            <ul class="site-nav list">
-                <li class="site-nav-item">
-                    <a href="mailto:info@devstudio.com" class="contacts-nav-link">
-                        <svg class="icon-nav" width="16" height="12">
-                            <use xlink:href="./images/sprite.svg#icon-mail"></use>
-                        </svg>
-                        <p class="margin-contacts-nav">info@devstudio.com</p>
-                    </a>
-                </li>
-                <li class="site-nav-item">
-                    <a href="tel:+380961111111" class="contacts-nav-link">
-                        <svg class="icon-nav" width="10" height="16">
-                            <use xlink:href="./images/sprite.svg#icon-phone"></use>
-                        </svg>
-                        <p class="margin-contacts-nav">+38 096 111 11 11</p>
-                    </a>
-                </li>
-            </ul>
+            </div>
         </div>
     </header>
     <main>
@@ -155,28 +164,28 @@
                     <a class="footer-header">Приєднуйтесь</a>
                     <ul class="icon-social-networks-ul list">
                         <li class="icon-social-networks-li">
-                            <a class="icon-social-networks">
+                            <a href="https://www.instagram.com/" class="icon-social-networks">
                                 <svg class="icon-s-n" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-social-networks-li">
-                            <a class="icon-social-networks">
+                            <a href="https://twitter.com/" class="icon-social-networks">
                                 <svg class="icon-s-n" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-social-networks-li">
-                            <a class="icon-social-networks">
+                            <a href="https://www.facebook.com/" class="icon-social-networks">
                                 <svg class="icon-s-n" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-social-networks-li">
-                            <a class="icon-social-networks">
+                            <a href="https://www.linkedin.com/" class="icon-social-networks">
                                 <svg class="icon-s-n" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-linkedin"></use>
                                 </svg>
