--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             </ul>
                         </nav>
                     <li>
-                        <ul class=" list">
+                        <ul class=" header-contact-ul list">
                             <li class="site-nav-item">
                                 <a href="mailto:info@devstudio.com" class="contacts-nav-link">
                                     <svg class="icon-nav" width="16" height="12">
@@ -323,7 +323,7 @@
                         </a>
                     </li>
                     <li class="icon-companis-li">
-                        <a href="https://goit.ua/" href="https://goit.ua/" class="icon-companies">
+                        <a href="https://goit.ua/" class="icon-companies">
                             <svg class="icon-companie" width="106" height="60">
                                 <use href="./images/sprite.svg#icon-companylogo"></use>
                             </svg>
