--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
                             </ul>
                         </nav>
                     <li>
-                        <ul class=" list">
+                        <ul class=" header-contact-ul list">
                             <li class="site-nav-item">
                                 <a href="mailto:info@devstudio.com" class="contacts-nav-link">
                                     <svg class="icon-nav" width="16" height="12">
